--- a/ES1C/src/Reports/md_СравнениеВерсийElasticsearch/Forms/ФормаОтчета/Form.form
+++ b/ES1C/src/Reports/md_СравнениеВерсийElasticsearch/Forms/ФормаОтчета/Form.form
@@ -499,10 +499,10 @@
     </edit>
   </attributes>
   <attributes>
-    <name>СерверElasticsearch</name>
+    <name>СерверES</name>
     <title>
       <key>ru</key>
-      <value>Сервер elasticsearch</value>
+      <value>Сервер ES</value>
     </title>
     <id>5</id>
     <valueType>
@@ -626,6 +626,26 @@
       <common>true</common>
     </edit>
   </attributes>
+  <attributes>
+    <name>ДатаОтбора</name>
+    <title>
+      <key>ru</key>
+      <value>Дата отбора</value>
+    </title>
+    <id>13</id>
+    <valueType>
+      <types>Date</types>
+      <dateQualifiers>
+        <dateFractions>Date</dateFractions>
+      </dateQualifiers>
+    </valueType>
+    <view>
+      <common>true</common>
+    </view>
+    <edit>
+      <common>true</common>
+    </edit>
+  </attributes>
   <formCommands>
     <name>Сформировать</name>
     <title>
@@ -653,12 +673,12 @@
   </commandInterface>
   <extInfo xsi:type="form:ReportFormExtInfo">
     <handlers>
-      <event>OnLoadVariantAtServer</event>
-      <name>ПриЗагрузкеВариантаНаСервере</name>
+      <event>OnLoadUserSettingsAtServer</event>
+      <name>ПриЗагрузкеПользовательскихНастроекНаСервере</name>
     </handlers>
     <handlers>
-      <event>BeforeLoadUserSettingsAtServer</event>
-      <name>ПередЗагрузкойПользовательскихНастроекНаСервере</name>
+      <event>OnLoadVariantAtServer</event>
+      <name>ПриЗагрузкеВариантаНаСервере</name>
     </handlers>
     <reportResult>Результат</reportResult>
     <detailsInformation>ДанныеРасшифровки</detailsInformation>
